# signal-example

./: .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/signal/: Cargo.toml
crates/signal/src/: api.rs  lib.rs  sol.rs  types.rs
crates/signal/tests/: contract_creation_transaction_response_test.rs  fixed_float_deposit_repsonse_test.rs  load_block_response_test.rs  suspicious_contract_created_response_test.rs  suspicious_contract_triggered_response_test.rs  tornado_cash_block_response_test.rs
crates/signal/tests/__data__/: contract_creation_transaction_response.json  fixed_float_deposit_response.json  random_block_response.json  suspicious_contract_created_response.json  suspicious_contract_triggered_signal_response.json  tornado_cash_block_response.json
db/: tbl.sql
docs/: README.md  services.json
docs/error_codes/: error_codes.json  error_codes.md
docs/signals/: README.md
scripts/: deploy.sh
