[package]
name = "insolvent_detect_signal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio"] }
async-trait = "0.1.74"
openssl = { version = "0.10", features = ["vendored"] }

alloy-json-abi = { version = "0.4.2" }
alloy-primitives = { version = "0.4.2" }
alloy-dyn-abi = { version = "0.4.2" }
alloy-sol-types = { version = "0.4.2", features=['json'] }
syn-solidity = { version = "0.4.2" }

[lib]
name = "insolvent_detect_signal"
path = "src/lib.rs"

[[bin]]
name = "write_block_by_number_json"
path = "./bin/write_block_by_number.rs"
doc = false

[[bin]]
name = "write_transaction_receipt_by_hash_json"
path = "./bin/write_transaction_receipt_by_hash.rs"
doc = false

[[bin]]
name = "insolvent_detect_signal"
path = "./bin/main.rs"
doc = false